--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ update the index.html   here full <!DOCTYPE html>
     <meta property="og:description"
           content="Trusted electrical engineering and generator experts serving Tanzania.">
     <meta property="og:image"
-          content="https://kingueletrical.com/assets/icons/company-logo.png">
+          content="/assets/icons/company-logo.png">
 
     <!-- ================= TWITTER ================= -->
     <meta name="twitter:card" content="summary_large_image">
@@ -39,7 +39,7 @@ update the index.html   here full <!DOCTYPE html>
     <meta name="twitter:description"
           content="Professional electrical and generator services across Tanzania.">
     <meta name="twitter:image"
-          content="https://kingueletrical.com/assets/icons/company-logo.png">
+          content="/assets/icons/company-logo.png">
 
     <!-- ================= CANONICAL ================= -->
     <link rel="canonical" href="https://kingueletrical.com/">
@@ -68,7 +68,7 @@ update the index.html   here full <!DOCTYPE html>
       "@type": "ElectricalContractor",
       "name": "Kingu Electrical Company Limited",
       "url": "https://kingueletrical.com",
-      "logo": "https://kingueletrical.com/assets/icons/company-logo.png",
+      "logo": "/assets/icons/company-logo.png",
       "telephone": "+255682843552",
       "address": {
         "@type": "PostalAddress",
