--- a/index.html
+++ b/index.html
@@ -1902,30 +1902,31 @@ update the index.html   here full <!DOCTYPE html>
 
     <!-- Header -->
     <header id="home">
-        <div class="content-wrapper">
-            <h1>
-                <span style="color:#1a5632">Kingu</span>
-                <span style="color:#dc3545">El</span><img src="assets/icons/kingu.svg" alt="Kingu Electrical Icon" class="header-icon-img"><span style="color:#dc3545">ectrical</span><span style="color:#1a5632">Company Limited</span>
-            </h1>
-              <p class="tagline" style="color: #DC3545; font-weight: bold; font-style: italic;">
-                Quality Electrical Services with Professional Experience
-              </p>
-            
-            <div class="contact-header">
-                <a href="mailto:Kinguelectricaltz@gmail.com">
-                    <i class="fas fa-envelope"></i> Kinguelectricaltz@gmail.com
-                </a>
-                <a href="tel:+255677014740">
-                    <i class="fas fa-phone"></i> +255 677 014 740
-                </a>
-                <a href="tel:+255763957908">
-                    <i class="fas fa-phone"></i> +255 763 957 908
-                </a>
-                <a href="tel:+255682843552">
-                    <i class="fas fa-phone"></i> +255 682 843 552
-                </a>
-            </div>
+    <div class="content-wrapper">
+        <h1>
+            <img src="/assets/icons/company-logo.png" alt="Company Logo" class="company-logo-img">
+            <span style="color:#1a5632">Kingu</span>
+            <span style="color:#dc3545">El</span><img src="assets/icons/kingu.svg" alt="Kingu Electrical Icon" class="header-icon-img"><span style="color:#dc3545">ectrical</span><span style="color:#1a5632">Company Limited</span>
+        </h1>
+          <p class="tagline" style="color: #DC3545; font-weight: bold; font-style: italic;">
+            Quality Electrical Services with Professional Experience
+          </p>
+        
+        <div class="contact-header">
+            <a href="mailto:Kinguelectricaltz@gmail.com">
+                <i class="fas fa-envelope"></i> Kinguelectricaltz@gmail.com
+            </a>
+            <a href="tel:+255677014740">
+                <i class="fas fa-phone"></i> +255 677 014 740
+            </a>
+            <a href="tel:+255763957908">
+                <i class="fas fa-phone"></i> +255 763 957 908
+            </a>
+            <a href="tel:+255682843552">
+                <i class="fas fa-phone"></i> +255 682 843 552
+            </a>
         </div>
+    </div>
     </header>
 
     <!-- Main Content -->
