--- a/index.html
+++ b/index.html
@@ -1861,7 +1861,7 @@ update the index.html   here full <!DOCTYPE html>
     <nav>
         <div class="nav-container">
             <a href="#home" class="nav-logo">
-                <svg class="nav-logo-icon" viewBox="0 0 24 24">
+                <svg class="nav-logo-icon" viewBox="0 0 48 48">
                     <path d="assets/icons/company-logo.png"/>
                 </svg>
                 <span style="color:#1a5632">KINGU</span> 
@@ -1927,6 +1927,12 @@ update the index.html   here full <!DOCTYPE html>
             </a>
         </div>
     </div>
+        .company-logo-img {
+    height: 40px; /* Adjust as needed */
+    width: auto;
+    vertical-align: middle;
+    margin-right: 10px; /* Space between logo and text */
+}
     </header>
 
     <!-- Main Content -->
