--- a/index.html
+++ b/index.html
@@ -1909,7 +1909,7 @@ update the index.html   here full <!DOCTYPE html>
             <h1>
                 <span style="color:#1a5632">Kingu</span>
                 <span style="color:#dc3545">El</span>
-                <img src="assets/icons/kingu.png" alt="Lightning Bolt Icon" class="header-icon-img">
+                <img src="assets/icons/kingu.svg" alt="Lightning Bolt Icon" class="header-icon-img">
                 <span style="color:#dc3545">ectrical</span>
                 <span style="color:#1a5632">Company Limited</span>
             </h1>
