--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-update the index.html   here full <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- ================= BASIC META ================= -->
