--- a/index.html
+++ b/index.html
@@ -1861,7 +1861,7 @@ h1 span {
         <div class="promo-content">
             <span class="promo-badge">LIMITED TIME OFFER</span>
             <h3>⚡ Get 15% Off Your First Generator Service!</h3>
-            <p>Book your first generator maintenance before January 31, 2026 • Use code: <strong>KINGUPOWER15</strong></p>
+            <p>Book your first generator maintenance before March 31, 2026 • Use code: <strong>KINGUPOWER15</strong></p>
             <a href="tel:+255682843552" class="promo-btn">📞 Call Now to Claim</a>
         </div>
     </div>
@@ -1939,7 +1939,7 @@ h1 span {
                 <i class="fas fa-envelope"></i> Kinguelectricaltz@gmail.com
             </a>
             <a href="tel:+255677014740" class="floating-contact">
-                <i class="fas fa-phone"></i> +255 677 014 740
+                <i class="fas fa-phone"></i> +255 672 912 802
             </a>
             <a href="tel:+255763957908" class="floating-contact">
                 <i class="fas fa-phone"></i> +255 763 957 908
@@ -2265,10 +2265,10 @@ h1 span {
             <div class="content-wrapper">
                 <h2>Meet Our Expert Team</h2>
                 <div class="team-grid">
-                    <!-- Eng. Kingu Goodluck - Director -->
+                    <!-- Eng. Kingu Paul - Director -->
                     <div class="team-member">
                         <div style="width: 120px; height: 120px; border-radius: 50%; margin: 0 auto 1.5rem; display: flex; align-items: center; justify-content: center; color: white; font-size: 2.5rem; font-weight: bold; background: linear-gradient(135deg, #FF6B35, #FF8E53);">KG</div>
-                        <div class="team-name">Eng. Kingu Goodluck</div>
+                        <div class="team-name">Eng. Kingu Paul</div>
                         <div class="team-title">Director & Professional Electrical Engineer</div>
                         <div style="color: #ffffff; font-size: 0.9rem; margin-bottom: 1rem; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">⏳ 14+ Years Experience</div>
                         <p>EWURA Licensed Electrical Engineer with extensive experience in power systems, generator installations, and industrial automation across Tanzania.</p>
@@ -2283,7 +2283,7 @@ h1 span {
                     <!-- Herbert Riziki- Electrical Technician -->
                     <div class="team-member">
                         <div style="width: 120px; height: 120px; border-radius: 50%; margin: 0 auto 1.5rem; display: flex; align-items: center; justify-content: center; color: white; font-size: 2.5rem; font-weight: bold; background: linear-gradient(135deg, #0d6efd, #0b5ed7);">HN</div>
-                        <div class="team-name">Herbert Njau</div>
+                        <div class="team-name">Herbert Riziki</div>
                         <div class="team-title">Senior Electrical Technician</div>
                         <div style="color: #ffffff; font-size: 0.9rem; margin-bottom: 1rem; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">⏳ 8+ Years Experience</div>
                         <p>Specialized in electrical installations, maintenance, and troubleshooting of industrial electrical systems and generator setups.</p>
@@ -2295,10 +2295,10 @@ h1 span {
                         </div>
                     </div>
 
-                    <!-- Rahel Mollel - Telecom Engineer -->
+                    <!-- Rahel Ayubu - Telecom Engineer -->
                     <div class="team-member">
                         <div style="width: 120px; height: 120px; border-radius: 50%; margin: 0 auto 1.5rem; display: flex; align-items: center; justify-content: center; color: white; font-size: 2.5rem; font-weight: bold; background: linear-gradient(135deg, #6f42c1, #59359a);">RM</div>
-                        <div class="team-name">Rahel Mollel</div>
+                        <div class="team-name">Rahel Ayubu</div>
                         <div class="team-title">Telecom Engineer & Project Administrator</div>
                         <div style="color: #ffffff; font-size: 0.9rem; margin-bottom: 1rem; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">⏳ 6+ Years Experience</div>
                         <p>Expert in telecom infrastructure projects, project coordination, and ensuring seamless communication between technical teams and clients.</p>
@@ -2313,7 +2313,7 @@ h1 span {
                     <!-- Bernard Masanja- Mechanical Technician -->
                     <div class="team-member">
                         <div style="width: 120px; height: 120px; border-radius: 50%; margin: 0 auto 1.5rem; display: flex; align-items: center; justify-content: center; color: white; font-size: 2.5rem; font-weight: bold; background: linear-gradient(135deg, #20c997, #199d76);">BS</div>
-                        <div class="team-name">Bernard Sabas</div>
+                        <div class="team-name">Bernard MAsanja</div>
                         <div class="team-title">Mechanical Technician</div>
                         <div style="color: #ffffff; font-size: 0.9rem; margin-bottom: 1rem; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">⏳ 7+ Years Experience</div>
                         <p>Specialized in mechanical aspects of generators, engine maintenance, and mechanical system installations for power solutions.</p>
@@ -2677,7 +2677,7 @@ h1 span {
                     </div>
                     <div class="card">
                         <h3>Contact Info</h3>
-                        <p><strong>Phone:</strong> +255 677 014 740</p>
+                        <p><strong>Phone:</strong> +255 672 912 802</p>
                         <p><strong>Phone:</strong> +255 763 957 908</p>
                         <p><strong>Phone:</strong> +255 682 843 552</p>
                         <p><strong>Email:</strong> Kinguelectricaltz@gmail.com</p>
@@ -2730,7 +2730,7 @@ h1 span {
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <p><i class="fas fa-phone"></i> +255 682 843 552</p>
-                    <p><i class="fas fa-phone"></i> +255 677 014 740</p>
+                    <p><i class="fas fa-phone"></i> +255 672 912 802</p>
                     <p><i class="fas fa-envelope"></i> Kinguelectricaltz@gmail.com</p>
                     <p><i class="fas fa-envelope"></i> Kinguelectricaltz@kingueletrical.com</p>
                 </div>
@@ -2814,10 +2814,6 @@ h1 span {
             
             const messages = [
                 { time: 0, text: "Initializing electrical systems..." },
-                { time: 3000, text: "Loading generator configurations..." },
-                { time: 7000, text: "Preparing service packages..." },
-                { time: 12000, text: "Loading team expertise..." },
-                { time: 16000, text: "Finalizing power solutions..." },
                 { time: 19000, text: "Welcome to Kingu Electrical!" }
             ];
             
